# Thesis

./: README.md
control_ws/install/: local_setup.sh  setup.sh
control_ws/install/ros2_control_demo_description/share/ros2_control_demo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
control_ws/install/ros2_control_demo_description/share/ros2_control_demo_description/cmake/: ros2_control_demo_descriptionConfig-version.cmake  ros2_control_demo_descriptionConfig.cmake
control_ws/install/ros2_control_demo_description/share/ros2_control_demo_description/environment/: ament_prefix_path.dsv  path.dsv
control_ws/install/ros2_control_demo_example_2/include/ros2_control_demo_example_2/ros2_control_demo_example_2/: diffbot_system.hpp
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_2.xml
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ros2_control_demo_example_2Config-version.cmake  ros2_control_demo_example_2Config.cmake
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/config/: diffbot_controllers.yaml
control_ws/install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
control_ws/log/: latest_build
diffdrive_canopen/: CMakeLists.txt  README.md  diffdrive_canopen.xml  package.xml
diffdrive_canopen/bringup/launch/: diffbot.launch.py
diffdrive_canopen/description/launch/: view_robot.launch.py
diffdrive_canopen/description/ros2_control/: diffbot.ros2_control.xacro
diffdrive_canopen/description/urdf/: diffbot.urdf.xacro
diffdrive_canopen/doc/: userdoc.rst
diffdrive_canopen/hardware/: diffbot_system.cpp
diffdrive_canopen/hardware/include/diffdrive_canopen/: build.sh  canopen_comms.hpp  canopen_driver.hpp  diffbot_system.hpp  master.dcf  master_slave_config.yaml  visibility_control.h
example_2/: CMakeLists.txt  package.xml
example_2/description/ros2_control/: diffbot.ros2_control.xacro
example_2/hardware/: diffbot_system.cpp
example_2/hardware/include/ros2_control_demo_example_2/: Makefile  canopen_comms.hpp  diffbot_system.hpp
pd4e_can/: CMakeLists.txt  README.md  package.xml
pd4e_can/config/single-pd42/: PD4-EB59CD-E-65-2.eds  bus.yml
pd4e_can/launch/: mock_launch.launch.py  real_hw_launch.launch.py
ros2_canopen/canopen_utils/canopen_utils/: cyclic_tester.py
station_docking/: CMakeLists.txt  package.xml
station_docking/src/: detect_docking_station.cpp
turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_gazebo/config/: main.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
turtlebot3_gazebo/descriptions/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
turtlebot3_gazebo/launch/: joystick_mybot.launch.py  localization_launch.py  mybot_robot_state_publisher.launch.py  mybot_world.launch.py  mybot_world_real.launch.py  navigation_launch.py  online_async_launch.py  robot_state_publisher.launch.py  spawn_mybot.launch bckup.py  spawn_mybot.launch.py
turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
turtlebot3_gazebo/worlds/: lab_experimental_with_objects.world  room_with_objects_2.world
urg_node/: README.md
urg_node/launch/: urg_node_ethernet.yaml  urg_node_serial.yaml
urg_node/src/: urg_node.cpp
(+38 files in other folders)
